// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLimitingAuditForm does not render CalculateRiskMeasurement when audit.jurisdictions has length but audit.rounds does not 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  disabled=""
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="choice one"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="792"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="choice two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="1325"
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="2123"
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select bp3-disabled sc-gqjmRU fLDKDv"
            >
              <select
                disabled=""
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  disabled=""
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value="12345678901234567890abcdefghijklmnopqrstuvwxyz😊"
                />
              </div>
            </div>
          </label>
        </div>
      </div>
    </form>
    <form
      data-testid="form-two"
      id="formTwo"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        />
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Select Ballots to Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Estimated Sample Size
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Choose the initial sample size for each contest you would like to use for Round 1 of the audit from the options below.
          </div>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="269"
                />
                <span
                  class="bp3-control-indicator"
                />
                BRAVO Average Sample Number: 
                269 samples
                
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="379"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                379 samples
                 (80% chance of reaching risk limit and completing the audit in one round)
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="78"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                78 samples
                
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="custom"
                />
                <span
                  class="bp3-control-indicator"
                />
                Enter your own sample size (not recommended)
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Boards
          </h3>
          <label
            for="auditBoards"
          >
            Set the number of audit boards you wish to use.
            <div
              class="bp3-html-select sc-chPdSV fGBJPP"
            >
              <select
                field="[object Object]"
                form="[object Object]"
                id="auditBoards"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
          <div
            class="sc-kgoBCf iTvLnm"
          >
            <div
              class="sc-kGXeez dEUkfc"
            />
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Manifest
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Click "Browse" to choose the appropriate Ballot Manifest file from your computer
          </div>
          <label
            class="bp3-file-input"
          >
            <input
              accept=".csv"
              name="manifest"
              type="file"
            />
            <span
              class="bp3-file-upload-input"
            >
              Select manifest...
            </span>
          </label>
        </div>
      </div>
      <div
        class="sc-iwsKbI iqpfIi"
      >
        <button
          class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Select Ballots To Audit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`RiskLimitingAuditForm does not render SelectBallotsToAudit when /audit/status is processing samplesizes 1`] = `
<div>
  <div
    class="sc-dxgOiQ bhYtUw"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  disabled=""
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  type="text"
                  value="contest name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  type="text"
                  value="contest name"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      type="text"
                      value="choice one"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      type="text"
                      value="792"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      type="text"
                      value="choice two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      type="text"
                      value="1325"
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  type="text"
                  value="2123"
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select bp3-disabled sc-gqjmRU fLDKDv"
            >
              <select
                disabled=""
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  disabled=""
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value="123456789"
                />
              </div>
            </div>
          </label>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`RiskLimitingAuditForm fetches initial state from api 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-kAzzGY eebgUX"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select sc-gqjmRU fLDKDv"
            >
              <select
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="sc-iwsKbI iqpfIi"
      >
        <button
          class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Estimate Sample Size
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`RiskLimitingAuditForm renders CalculateRiskMeasurement when /audit/status returns round data 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  disabled=""
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="choice one"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="792"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="choice two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="1325"
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="2123"
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select bp3-disabled sc-gqjmRU fLDKDv"
            >
              <select
                disabled=""
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  disabled=""
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value="12345678901234567890abcdefghijklmnopqrstuvwxyz😊"
                />
              </div>
            </div>
          </label>
        </div>
      </div>
    </form>
    <form
      data-testid="form-two"
      id="formTwo"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        />
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Select Ballots to Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Estimated Sample Size
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Choose the initial sample size for each contest you would like to use for Round 1 of the audit from the options below.
          </div>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-disabled"
              >
                <input
                  disabled=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="269"
                />
                <span
                  class="bp3-control-indicator"
                />
                BRAVO Average Sample Number: 
                269 samples
                
              </label>
              <label
                class="bp3-control bp3-radio bp3-disabled"
              >
                <input
                  checked=""
                  disabled=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="379"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                379 samples
                 (80% chance of reaching risk limit and completing the audit in one round)
              </label>
              <label
                class="bp3-control bp3-radio bp3-disabled"
              >
                <input
                  disabled=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="78"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                78 samples
                
              </label>
              <label
                class="bp3-control bp3-radio bp3-disabled"
              >
                <input
                  disabled=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="custom"
                />
                <span
                  class="bp3-control-indicator"
                />
                Enter your own sample size (not recommended)
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Boards
          </h3>
          <label
            for="auditBoards"
          >
            Set the number of audit boards you wish to use.
            <div
              class="bp3-html-select bp3-disabled sc-chPdSV fGBJPP"
            >
              <select
                disabled=""
                field="[object Object]"
                form="[object Object]"
                id="auditBoards"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
          <div
            class="sc-kgoBCf iTvLnm"
          >
            <div
              class="sc-kGXeez dEUkfc"
            >
              <a
                class="bp3-text-small"
                href="/election/1/board/audit-board-1"
              >
                Audit Board #1
              </a>
              <span
                id="qr-audit-board-1"
                role="button"
                title="Click to print"
              >
                <canvas
                  class="sc-kpOJdX gBZneu"
                  height="250"
                  style="height: 250px; width: 250px;"
                  width="250"
                />
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Manifest
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <b>
              Filename:
            </b>
             
            Ballot Manifest May 2019 Election - WYNADOTTE.csv
          </div>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <b>
              Ballots:
            </b>
             
            2117
          </div>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <b>
              Batches:
            </b>
             
            10
          </div>
        </div>
      </div>
    </form>
    <form
      data-testid="form-three-1"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Round 1
        </h2>
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Retrieval List: 
          379
           Total Ballots
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <p>
            Contest 
            1
            : 
            379
             ballots
          </p>
        </div>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Aggregated Ballot Retrieval List for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Placeholders for Round 
            1
          </span>
        </button>
        <button
          class="bp3-button sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Download Label Sheets for Round 
            1
          </span>
        </button>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest 1: contest name
          </h3>
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audited Results: Round 
            1
            , Contest 
            1
             
            INCOMPLETE
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of votes recorded for each candidate/choice in the audited ballots for Round 
            1
            , Contest 
            1
          </div>
          <div
            class="sc-dxgOiQ fYWcqN"
          >
            <div
              class="sc-jKJlTe kzXGOb"
            >
              <label
                class="sc-ckVGcZ DOsGM"
                for="round-0-contest-0-choice-choice-1"
              >
                choice one
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-1"
                    name="contests[0][choice-1]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-jKJlTe kzXGOb"
            >
              <label
                class="sc-ckVGcZ DOsGM"
                for="round-0-contest-0-choice-choice-2"
              >
                choice two
              </label>
              <div
                class="sc-bZQynM iEAxBy"
              >
                <div
                  class="bp3-input-group sc-gzVnrw htprzv"
                >
                  <input
                    class="bp3-input"
                    id="round-0-contest-0-choice-choice-2"
                    name="contests[0][choice-2]"
                    style="padding-right: 10px;"
                    value="0"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Progress: 
            0
             of 
            1
             
            complete
          </h3>
        </div>
        <div
          class="sc-iwsKbI iqpfIi"
        >
          <button
            class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Calculate Risk Measurement
            </span>
          </button>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`RiskLimitingAuditForm renders SelectBallotsToAudit when /audit/status returns contest data 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  disabled=""
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  value="contest name"
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value="choice one"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value="792"
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value="choice two"
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value="1325"
                    />
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  disabled=""
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value="2123"
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select bp3-disabled sc-gqjmRU fLDKDv"
            >
              <select
                disabled=""
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
          <div
            class="sc-kgoBCf iTvLnm"
          >
            <div
              class="sc-kGXeez dEUkfc"
            />
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group bp3-disabled sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  disabled=""
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value="123456789"
                />
              </div>
            </div>
          </label>
        </div>
      </div>
    </form>
    <form
      data-testid="form-two"
      id="formTwo"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        />
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Select Ballots to Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Estimated Sample Size
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Choose the initial sample size for each contest you would like to use for Round 1 of the audit from the options below.
          </div>
          <div
            class="sc-bwzfXH izcbHX"
          >
            <div>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  checked=""
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="269"
                />
                <span
                  class="bp3-control-indicator"
                />
                BRAVO Average Sample Number: 
                269 samples
                
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="379"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                379 samples
                 (80% chance of reaching risk limit and completing the audit in one round)
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="78"
                />
                <span
                  class="bp3-control-indicator"
                />
                
                78 samples
                
              </label>
              <label
                class="bp3-control bp3-radio"
              >
                <input
                  name="sampleSize[contest-1]"
                  type="radio"
                  value="custom"
                />
                <span
                  class="bp3-control-indicator"
                />
                Enter your own sample size (not recommended)
              </label>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Audit Boards
          </h3>
          <label
            for="auditBoards"
          >
            Set the number of audit boards you wish to use.
            <div
              class="bp3-html-select sc-chPdSV fGBJPP"
            >
              <select
                field="[object Object]"
                form="[object Object]"
                id="auditBoards"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Manifest
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Click "Browse" to choose the appropriate Ballot Manifest file from your computer
          </div>
          <label
            class="bp3-file-input"
          >
            <input
              accept=".csv"
              name="manifest"
              type="file"
            />
            <span
              class="bp3-file-upload-input"
            >
              Select manifest...
            </span>
          </label>
        </div>
      </div>
      <div
        class="sc-iwsKbI iqpfIi"
      >
        <button
          class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Select Ballots To Audit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`RiskLimitingAuditForm renders correctly with initialData 1`] = `
<div>
  <div
    class="sc-eNQAEJ jDJHSN"
  >
    <form
      data-testid="form-one"
    >
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Administer an Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <label
            for="audit-name"
            id="audit-name-label"
          >
            Election Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="audit-name-label"
                  class="bp3-input"
                  id="audit-name"
                  name="name"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Contest  Info
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of the contest that will drive the audit.
          </div>
          <label
            for="contests[0].name"
          >
            Contest
             
            
             
            Name
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].name"
                  name="contests[0].name"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the number of winners for the contest.
          </div>
          <label
            for="contests[0].winners"
          >
            Winners
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].winners"
                  name="contests[0].winners"
                  style="padding-right: 10px;"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Candidates/Choices & Vote Totals
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the name of each candidate choice that appears on the ballot for this contest.
          </div>
          <div
            class="sc-VigVT cDFwSc"
          >
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                1
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[0].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-fjdhpX gYcVlS"
            >
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Name of Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].name"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
              <label
                class="bp3-label sc-cSHVUG jEtDoB"
              >
                Votes for Candidate/Choice 
                2
                <div
                  class="sc-jzJRlG cjErgX sc-bZQynM iEAxBy"
                >
                  <div
                    class="bp3-input-group sc-gzVnrw htprzv"
                  >
                    <input
                      class="bp3-input"
                      name="contests[0].choices[1].numVotes"
                      style="padding-right: 10px;"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <p
              class="sc-kAzzGY eebgUX"
            >
              Add a new candidate/choice
            </p>
          </div>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Total Ballots Cast
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Enter the overall number of ballot cards cast in jurisdictions containing this contest.
          </div>
          <label
            for="contests[0].totalBallotsCast"
          >
            Total Ballots for Contest
             
            
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  class="bp3-input"
                  id="contests[0].totalBallotsCast"
                  name="contests[0].totalBallotsCast"
                  style="padding-right: 10px;"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Audit Settings
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Desired Risk Limit
          </h3>
          <label
            for="risk-limit"
          >
            Set the risk for the audit as a percentage (e.g. "5" = 5%)
            <div
              class="bp3-html-select sc-gqjmRU fLDKDv"
            >
              <select
                field="[object Object]"
                form="[object Object]"
                id="risk-limit"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
                <option>
                  16
                </option>
                <option>
                  17
                </option>
                <option>
                  18
                </option>
                <option>
                  19
                </option>
                <option>
                  20
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Random Seed
          </h3>
          <label
            for="random-seed"
            id="random-seed-label"
          >
            Enter the random characters to seed the pseudo-random number generator.
            <div
              class="sc-bZQynM iEAxBy"
            >
              <div
                class="bp3-input-group sc-gzVnrw htprzv"
              >
                <input
                  aria-labelledby="random-seed-label"
                  class="bp3-input"
                  id="random-seed"
                  name="randomSeed"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="sc-iwsKbI iqpfIi"
      >
        <button
          class="bp3-button bp3-intent-primary sc-EHOje fJvKPB"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Estimate Sample Size
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
